bad/mul_invalid_types_null_null.example_compiler_output
ERROR
[1mbad/mul_invalid_types_null_null.lat:3:7: [1;31merror: [0;1mmultiplication is defined only for int values, not `null` and `null`[m
	null * null;
	     [1;32m^[m
